# bloodflow_no_qt

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  README_en.md  bloodflow  build.sh
data/: optimization_test.py
data/back/: base.csv
data/configs/: ages_test.csv  detailed_run_config.csv  run_config.csv
data/configs/base_configs/: blood_config_25.json  blood_config_35.json  blood_config_45.json  blood_config_55.json  blood_config_65.json  blood_config_75.json  heart_config_25.json  heart_config_25_aortic_reg.json  heart_config_35.json  heart_config_45.json  heart_config_55.json  heart_config_65.json  heart_config_75.json
data/configs/current_configs/: blood_config_25.json  heart_config_25.json
data/log/: 1695815978.txt  1695908143.txt  log_parser.py
lib/: bayes_runner.h  calculator.h  csv_reader.h  detailed_run.h  edge.h  graph.h  heart_advanced_valves.h  heart_aortic_reg.h  heart_part.h  heart_reg.h  matrix_utils.h  rcrwindkessel.h  rescaler.h  task.h  ukf.h  vertex.h
src/: bayes_runner.cpp  calculator.cpp  edge.cpp  graph.cpp  heart_part.cpp  main.cpp  matrix_utils.cpp  task.cpp  ukf.cpp  vertex.cpp
